assets/css/style.css
/*
 * RESET
 */

*,
*:before,
*:after{
	margin: 0;
	padding: 0;
    box-sizing: border-box;
}


/*
 * COLORS
 */
:root {
    /* layout width */
    --max-width-layout: 1160px;
    /*blue-colors*/
    --blue: #0066CC;
    --blue-black: #0052A3;
    /*orange-colors*/
    --orange: #fa7a2f;
    --orange-black:#E85906;
    /*text-colors*/
    --text-white: #D9D9DC;
    --text-black: #101112;
    --text-white-button: #FFFFFF;
    --text-black-button: #000000;
    /*bg-colors*/
    --bg-white: #EFEDED;
    --bg-black: #262729;
    --bg-white-box: #FFFFFF;
    --bg-black-box: #3B3B3B;
}


/*
 * ALL
 */
*:focus-visible{
    outline-offset: 2px;
    border-radius: 6px;
}
html{
    font-size: 62.5%;
    font-family: "Domine", serif;
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;
    line-height: 1.44;
    scroll-behavior: smooth;
}
body{
    font-size: 2.2rem;
}
.home, .mylinux{
    padding: 0 1.6rem 1.6rem;
}
@media (max-width: 767px){
    .home, .mylinux{
        padding: 0;
    }
}
img{
    max-width: 100%;
    height: auto;
    display: block;
    border: 1px solid rgba(0, 0, 0, 0.12);
}
.box-shadow{
    box-shadow: 0px 8px 12px 0px rgba(0, 0, 0, .25);
}
strong {
    font-weight: 700;
}


/*
 * SCROLL HIDDEN
 */
.hidden-scroll{
    overflow: hidden;
}


/*
 * TITLES
 */
h1,
h2,
h3,
h4{
    font-family: "Domine", serif;
    font-optical-sizing: auto;
    font-weight: 700;
    font-style: normal;
    text-transform: uppercase;
}
h1,
h2{
    font-size: 6rem;
    line-height: .94;
}
h2{
    margin-bottom: 4.2rem;
}
h3{
    font-size: 3.2rem;
    line-height: 1.12;
    margin: 0 0 1.6rem;
}
h4{
    font-size: 2.6rem;
    line-height: 1.1;
    font-weight: 400;
    margin: 0 0 1.6rem;
}
h2::after{
    content: "";
    display: block;
    width: 10rem;
    height: .5rem;
}
@media (max-width: 880px){
    h1,
    h2{
        font-size: 4.6rem;
    }
    h2{
        margin-bottom: 4rem;
    }
}
@media(max-width: 420px){
    h1,
    h2{
        font-size: 3.8rem;
    }
    h3{
        font-size: 2.8rem;
    }
}
@media (max-width: 320px){
   h1,
    h2{
        font-size: 3.6rem;
    }
}


/*
 * HEADER
 */
.header{
    max-width: var(--max-width-layout);
    padding: 1.6rem;
    margin: 0 auto;
    position: relative;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
}
.navigation{
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
}
a.link-brand{
    display: block;
}
a.link-brand svg{
    max-width: 4.2rem;
    max-height: 4.2rem;
    vertical-align: middle;
}
.ui-switch{
    margin-left: .6rem;
    order: 2;
}
.nav-links{
    order: 1;
}
.links{
    list-style: none;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
}
.links a{
    display: inline-block;
    padding: .6rem 1.2rem;
    font-weight: 300;
    text-decoration: none;
    transition: all .3s ease;
    font-size: 2rem;
}
.links a::after{
    content: "";
    display: block;
    width: 28%;
    height: 2px;
    transition: all .3s ease;
}
.links a:hover::after{
    width: 100%;
}


/*
 *MENU MOBILE
 */
.icon-nav{
    display: none;
}
@media (max-width: 820px) {
    .ui-switch{
        margin:0 .6rem 0 0;
    }
    .ui-switch,
    .nav-links{
        order: initial;
     }
    .links{
        width: 100%;
    }
    .icon-nav{
        display: block;
        cursor: pointer;
    }
    .svg-icon-nav {
        vertical-align: middle;
        width: 4.2rem;
        height: 4.2rem;
    }
    .nav-links{
        flex-direction: column;
        flex-wrap: nowrap;
        z-index: 2;
        width: 100%;
        position: absolute;
        top: 96px;
        left: 0;
        height: calc(100vh - 96px);
        opacity: 0;
        transform: translate3d(calc(-100% - 84px), 0, 0);
        transition: .4s ease all;
    }
    .nav-links li{
        width: 100%;
        margin: 0 1.6rem;
    }
    .links a{
        width: 100%;
        font-size: 2.8rem;
        padding: 1.6rem 0;
    }
    .nav-links.nav-open{
        opacity: initial;
        transform: initial;
    }
}


/*
 * MAIN
 */
.main{
    overflow: hidden;
}


/*
 * MY LINUX
 */
.page{
    max-width: var(--max-width-layout);
    padding: 1.6rem;
    margin: 0 auto;
    display: flex;
    flex-wrap: wrap;
    font-size: 1.8rem;
}
.page-box{
    margin-top: 3.2rem;
    display: flex;
    flex-wrap: wrap;
    gap: 1.6rem;
}
.summary{
    flex: 3;
}
.summary-nav{
    position: sticky;
    top: 1.6rem;
    z-index: 5;
    height: 100vh;
    overflow-y: auto;
}
.content{
    flex: 7;
}
.page-box .lead{
    font-size: 2rem;
    margin-bottom: 3.2rem;
}
.page h1, .page h2, .page h3{
    margin-bottom: 2.4rem;
    text-transform: none;
    line-height: normal;
}
.page h1{
    font-size: 3.8rem;
}
.page h2{
    font-size: 3rem;
}
.page h3{
    font-size: 2.6rem;
}
.page-box div{
    margin-bottom: 4.4rem;
}
.page-box p, .page-box pre{
    margin-bottom: 1.6rem;
}
pre{
    box-shadow: 0px 8px 12px 0px rgba(0, 0, 0, .25);
    border-radius: .6rem;
    font-size: 1.6rem;
    padding: 1rem 1.6rem;
    max-width: 100%;
    white-space: pre-wrap;
    word-break: break-all;
}
kbd, code{
    font-family: monospace;
}
kbd, .code{
    padding: .42rem .84rem;
    border-radius: .3rem;
}
.summary-list{
    list-style: none;
    padding-left: 1.6rem;
}
.summary-list li{
    margin: .8rem 0;
}
.fw-bold{
    list-style: none;
    font-weight: bold;
}
.content ol, .content ul{
    list-style-position: inside;
    padding-left: 1.8rem;
}
.content > ol, .content > ul{
   margin: 0 0 1.6rem 0;
}
.content ul li, .content ol li{
    margin: 1rem 0;
}
.page-box a{
    transition: all .3s;
    text-decoration: none;
}
.page-box a:hover{
    text-decoration: underline;
}
.page-box div.alert{
    padding: 1.6rem;
    margin: 0 0 1.6rem 0;
    border-radius: .6rem;
    box-shadow: 0px 8px 12px 0px rgba(0, 0, 0, .25);
}
.alert div{
    margin: 0;
}
/* ... */

